@@ -266,9 +266,8 @@ sub members
 sub addresses
 {
     my ($self, @params) = @_;
-
-    my $members = $self->members();
-    return $members->addresses(@params);
+    my $id = $self->parentRow()->id();
+    return $self->parentModule()->objectAddresses($id);
 }
 
 # Method: pageTitle
@@ -280,6 +279,32 @@ sub pageTitle
     my ($self) = @_;
 
     return $self->parentRow()->printableValueByName('name');
+}
+
+
+sub addedRowNotify
+{
+    my ($self) = @_;
+    $self->_invalidateCache();
+}
+
+sub deletedRowNotify
+{
+    my ($self) = @_;
+    $self->_invalidateCache();
+}
+
+sub updatedRowNotify
+{
+    my ($self) = @_;
+    $self->_invalidateCache();
+}
+
+sub _invalidateCache
+{
+    my ($self) = @_;
+    my $id = $self->parentRow()->id();
+    $self->parentModule()->clearMembersCache($id);
 }
 
 1;
