@@ -1,3 +1,5 @@
+HEAD
+	+ Added cache for object members
 3.2
 	+ Set version to 3.2
 3.1.1
